Test/typing/should_fail/methods_type_empty_return.java
package tutu.titi.toto;

class A {

    private MyType myMethod(){
        return;
    }

}